Fix Java 9+ warnings in formats-gpl component